# hx711_jetson

./: CMakeLists.txt  Readme.md  hx711_gpiod.hpp  main.cpp
